Use a JSON-backed configuration storage

--- a/Supervisor.Service/Supervisor.Service.csproj
+++ b/Supervisor.Service/Supervisor.Service.csproj
@@ -48,6 +48,9 @@
     <Reference Include="Common.Logging">
       <HintPath>..\packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.5\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
     </Reference>
@@ -67,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\IConfiguration.cs" />
+    <Compile Include="Configuration\JsonBackedConfiguration.cs" />
     <Compile Include="Configuration\MessageTargetConfiguration.cs" />
     <Compile Include="Configuration\MonitorConfiguration.cs" />
     <Compile Include="Configuration\ListBackedConfiguration.cs" />
