--- a/Supervisor.Service/packages.config
+++ b/Supervisor.Service/packages.config
@@ -3,6 +3,7 @@
   <package id="Castle.Core" version="3.0.0.4001" />
   <package id="Castle.Windsor" version="3.0.0.4001" />
   <package id="Common.Logging" version="2.0.0" />
+  <package id="Newtonsoft.Json" version="4.5.5" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="Quartz" version="2.0.1" />
 </packages>
