--- a/Supervisor.Service/Supervisor.Service.csproj
+++ b/Supervisor.Service/Supervisor.Service.csproj
@@ -70,6 +70,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationBasedNLogTargetFactory.cs" />
+    <Compile Include="ConfigurationBasedQuartzSchedulerFactory.cs" />
     <Compile Include="Configuration\IConfiguration.cs" />
     <Compile Include="Configuration\JsonBackedConfiguration.cs" />
     <Compile Include="Configuration\MessageTargetConfiguration.cs" />
