Descend monitors from MonitorBase
This abstracts away how the alert is performed. It also restricts
monitors to use only the correct alerting levels.

--- a/Supervisor.Service/Supervisor.Service.csproj
+++ b/Supervisor.Service/Supervisor.Service.csproj
@@ -87,6 +87,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Monitoring\AlwaysErrorMonitor.cs" />
+    <Compile Include="Monitoring\MonitorBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
